@@ -2,12 +2,12 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Open Street Maps Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.osm;singleton:=true
-Bundle-Version: 2.0.7
+Bundle-Version: 2.0.8
 Bundle-Activator: org.netxms.ui.eclipse.osm.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.rap.ui;bundle-version="2.3.2",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.7",
- org.netxms.webui.core;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.9",
+ org.netxms.webui.core;bundle-version="2.0.9",
  org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.7",
  org.netxms.rap.draw2d.compatibility;bundle-version="1.5.2"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
